--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "cdev": "git add . && git commit -m \"auto commit to dev2\" && git push origin dev2"
+        "cdev": "git add . && git commit -m \"auto commit to dev\" && git push origin dev"
     },
     "repository": {
         "type": "git",
