--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "cdev": "git add . && git commit -m \"auto commit to b\" && git push origin CSFO-1-app-connect-router-to-app-and-show-components-from-model-json"
+        "cdev": "git add . && git commit -m \"auto commit to b\" && git push origin dev"
     },
     "repository": {
         "type": "git",
